--- a/packages/express-backend/package.json
+++ b/packages/express-backend/package.json
@@ -2,9 +2,12 @@
   "name": "express-backend",
   "version": "1.0.0",
   "description": "backend of app",
+  "type": "module",
   "main": "backend-index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon backend-index.js",
+    "start": "node backend.js"
   },
   "author": "",
   "license": "ISC",
