--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm -w packages/react-frontend run dev"
+    "dev": "npm -w packages/react-frontend run dev",
+    "back-end" : "npm -w packages/express-backend run dev"
   },
   "repository": {
     "type": "git",
